--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.itarchitecture1">
-
+    <queries>
+        <package android:name="com.example.remote_suisei_service" />
+    </queries>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,12 +18,6 @@
         <activity
             android:name=".SecondActivity"
             android:exported="false" />
-
-        <service
-            android:name=".SuiseiAidlService"
-            android:enabled="true"
-            android:exported="true" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true"
